# wc

./: Cargo.toml
src/: main.rs
tests/: abc.txt  def.txt  integration_test.rs
