[package]
name = "wc"
version = "0.1.0"
authors = ["Jonas Wolf <jonas.wolf@jonaswolf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" } # Required due to bug (override not working correctly) in 2.33.0